// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Keyboard > should render differently when overlay is defined 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center gap-y-1.5 p-1.5"
  >
    <div
      class="flex gap-x-1.5"
    >
      <button
        aria-label="q"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          Q
        </p>
      </button>
      <button
        aria-label="w"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          W
        </p>
      </button>
      <button
        aria-label="e"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          E
        </p>
      </button>
      <button
        aria-label="r"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          R
        </p>
      </button>
      <button
        aria-label="t"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          T
        </p>
      </button>
      <button
        aria-label="y"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          Y
        </p>
      </button>
      <button
        aria-label="u"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          U
        </p>
      </button>
      <button
        aria-label="i"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          I
        </p>
      </button>
      <button
        aria-label="o"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          O
        </p>
      </button>
      <button
        aria-label="p"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          P
        </p>
      </button>
    </div>
    <div
      class="flex gap-x-1.5"
    >
      <button
        aria-label="a"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          A
        </p>
      </button>
      <button
        aria-label="s"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          S
        </p>
      </button>
      <button
        aria-label="d"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          D
        </p>
      </button>
      <button
        aria-label="f"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          F
        </p>
      </button>
      <button
        aria-label="g"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          G
        </p>
      </button>
      <button
        aria-label="h"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          H
        </p>
      </button>
      <button
        aria-label="j"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          J
        </p>
      </button>
      <button
        aria-label="k"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          K
        </p>
      </button>
      <button
        aria-label="l"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          L
        </p>
      </button>
    </div>
    <div
      class="flex gap-x-1.5"
    >
      <button
        aria-label="Enter"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-12 sm:w-17 text-xs sm:text-sm"
        type="button"
      >
        <p>
          ENTER
        </p>
      </button>
      <button
        aria-label="z"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          Z
        </p>
      </button>
      <button
        aria-label="x"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          X
        </p>
      </button>
      <button
        aria-label="c"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          C
        </p>
      </button>
      <button
        aria-label="v"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          V
        </p>
      </button>
      <button
        aria-label="b"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          B
        </p>
      </button>
      <button
        aria-label="n"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          N
        </p>
      </button>
      <button
        aria-label="m"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl"
        type="button"
      >
        <p>
          M
        </p>
      </button>
      <button
        aria-label="Backspace"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-12 sm:w-17 text-lg sm:text-xl"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-delete-left"
          data-icon="delete-left"
          data-prefix="fas"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 640 512"
        >
          <path
            d="M576 128c0-35.3-28.7-64-64-64L205.3 64c-17 0-33.3 6.7-45.3 18.7L9.4 233.4c-6 6-9.4 14.1-9.4 22.6s3.4 16.6 9.4 22.6L160 429.3c12 12 28.3 18.7 45.3 18.7L512 448c35.3 0 64-28.7 64-64l0-256zM284.1 188.1c9.4-9.4 24.6-9.4 33.9 0l33.9 33.9 33.9-33.9c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-33.9 33.9 33.9 33.9c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-33.9-33.9-33.9 33.9c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l33.9-33.9-33.9-33.9c-9.4-9.4-9.4-24.6 0-33.9z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Keyboard > should render when shown 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center gap-y-1.5 p-1.5"
  >
    <div
      class="flex gap-x-1.5"
    >
      <button
        aria-label="q"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          Q
        </p>
      </button>
      <button
        aria-label="w"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          W
        </p>
      </button>
      <button
        aria-label="e"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          E
        </p>
      </button>
      <button
        aria-label="r"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          R
        </p>
      </button>
      <button
        aria-label="t"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          T
        </p>
      </button>
      <button
        aria-label="y"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          Y
        </p>
      </button>
      <button
        aria-label="u"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          U
        </p>
      </button>
      <button
        aria-label="i"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          I
        </p>
      </button>
      <button
        aria-label="o"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          O
        </p>
      </button>
      <button
        aria-label="p"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          P
        </p>
      </button>
    </div>
    <div
      class="flex gap-x-1.5"
    >
      <button
        aria-label="a"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          A
        </p>
      </button>
      <button
        aria-label="s"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          S
        </p>
      </button>
      <button
        aria-label="d"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          D
        </p>
      </button>
      <button
        aria-label="f"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          F
        </p>
      </button>
      <button
        aria-label="g"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          G
        </p>
      </button>
      <button
        aria-label="h"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          H
        </p>
      </button>
      <button
        aria-label="j"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          J
        </p>
      </button>
      <button
        aria-label="k"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          K
        </p>
      </button>
      <button
        aria-label="l"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          L
        </p>
      </button>
    </div>
    <div
      class="flex gap-x-1.5"
    >
      <button
        aria-label="Enter"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-12 sm:w-17 text-xs sm:text-sm cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          ENTER
        </p>
      </button>
      <button
        aria-label="z"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          Z
        </p>
      </button>
      <button
        aria-label="x"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          X
        </p>
      </button>
      <button
        aria-label="c"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          C
        </p>
      </button>
      <button
        aria-label="v"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          V
        </p>
      </button>
      <button
        aria-label="b"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          B
        </p>
      </button>
      <button
        aria-label="n"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          N
        </p>
      </button>
      <button
        aria-label="m"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-8 sm:w-10.75 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <p>
          M
        </p>
      </button>
      <button
        aria-label="Backspace"
        class="h-14.5 bg-grey-light rounded-sm p-3 select-none font-bold flex justify-center items-center w-12 sm:w-17 text-lg sm:text-xl cursor-pointer hover:bg-grey-very-light active:bg-grey-very-light"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-delete-left"
          data-icon="delete-left"
          data-prefix="fas"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 640 512"
        >
          <path
            d="M576 128c0-35.3-28.7-64-64-64L205.3 64c-17 0-33.3 6.7-45.3 18.7L9.4 233.4c-6 6-9.4 14.1-9.4 22.6s3.4 16.6 9.4 22.6L160 429.3c12 12 28.3 18.7 45.3 18.7L512 448c35.3 0 64-28.7 64-64l0-256zM284.1 188.1c9.4-9.4 24.6-9.4 33.9 0l33.9 33.9 33.9-33.9c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-33.9 33.9 33.9 33.9c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-33.9-33.9-33.9 33.9c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l33.9-33.9-33.9-33.9c-9.4-9.4-9.4-24.6 0-33.9z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
